--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,8 @@
 <p th:if="${param.logout}">로그아웃되었습니다.</p>
 <!-- 회원가입 링크 수정 -->
 <p>계정이 없나요? <a th:href="@{/signup}">Sign up</a></p>
-<!-- 카카오 로그인 -->
-<a th:href="@{/oauth2/authorization/kakao}">카카오로 로그인</a>
+<!-- 소셜 로그인 -->
+<a th:href="@{/oauth2/authorization/kakao}">카카오로 로그인</a><p/>
+<a th:href="@{/oauth2/authorization/google}">구글로 로그인</a><p/>
 </body>
 </html>
