--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,5 +23,6 @@
 <!-- 소셜 로그인 -->
 <a th:href="@{/oauth2/authorization/kakao}">카카오로 로그인</a><p/>
 <a th:href="@{/oauth2/authorization/google}">구글로 로그인</a><p/>
+<a th:href="@{/oauth2/authorization/naver}">네이버로 로그인</a><p/>
 </body>
 </html>
